--- a/ulasan.html
+++ b/ulasan.html
@@ -109,7 +109,30 @@
     </section>
 
     <!-- footer start -->
-    <footer>Copyright © 2023 | Design By Itsna Maulana Hasan</footer>
+    <footer class="footer">
+      <div class="footer-content container">
+        <div class="footer-logo">Dapur Akia</div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 Dapur Akia. All rights reserved.</p>
+        </div>
+        <div class="footer-social">
+          <ul class="social-icons">
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <!-- footer end -->
   </body>
 
