--- a/ulasan.html
+++ b/ulasan.html
@@ -13,6 +13,10 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/46b7ceee20.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Navbar Start -->
@@ -111,9 +115,16 @@
     <!-- footer start -->
     <footer class="footer">
       <div class="footer-content container">
-        <div class="footer-logo">Dapur Akia</div>
+        <div class="footer-logo">
+          Dapur Akia
+          <br />
+          <div style="font-size: 15px; color: var(--yellow)">
+            dapurakia@gmail.com
+          </div>
+        </div>
+
         <div class="footer-bottom">
-          <p>&copy; 2024 Dapur Akia. All rights reserved.</p>
+          <p>&copy; 2024 Dapur Akia. Semua hak dilindungi.</p>
         </div>
         <div class="footer-social">
           <ul class="social-icons">
