--- a/index.html
+++ b/index.html
@@ -95,9 +95,16 @@
     <!-- footer start -->
     <footer class="footer">
       <div class="footer-content container">
-        <div class="footer-logo">Dapur Akia</div>
+        <div class="footer-logo">
+          Dapur Akia
+          <br />
+          <div style="font-size: 15px; color: var(--yellow)">
+            dapurakia@gmail.com
+          </div>
+        </div>
+
         <div class="footer-bottom">
-          <p>&copy; 2024 Dapur Akia. All rights reserved.</p>
+          <p>&copy; 2024 Dapur Akia. Semua hak dilindungi.</p>
         </div>
         <div class="footer-social">
           <ul class="social-icons">
